<resources>
  <string name="app_name">DroidTracker</string>
  <string name="perm_write">Write permission for the database</string>
  <string name="perm_read">Read permission for the database</string>
  <string name="openweather_api_key">678838031a4065f09e10bff3eda7bc65</string>
  <string name="title_activity_main">DroidTracker</string>
  <string name="app_properties">app.properties</string>
  <string name="min_time">minTime</string>
  <string name="min_distance">minDistance</string>
  <string name="title_activity_run">RunActivity</string>
  <string name="title_activity_maps">Map</string>
  <string name="mapbox_access_token">pk.eyJ1IjoiYWNlcmFzb25pIiwiYSI6ImNrNDh3eDV5ODA1cGcza3RkNW5uOHAzYWwifQ.pAsG16KVhBb6gVB6gNnJ0Q</string>
  <string name="title_activity_performance">PerformanceActivity</string>
  <string name="title_activity_browse_run_details">BrowseRunDetailsActivity</string>
  <string name="title_activity_user_settings">UserSettingsActivity</string>
  <string name="title_activity_user_setup">UserSetupActivity</string>
  <string name="title_activity_performance_type_selector">PerformanceTypeSelectorActivity</string>
  <string name="title_activity_weather_performance">WeatherPerformanceActivity</string>
  <string name="title_activity_edit_bmi">EditBmiActivity</string>
  <string name="two_decimals_format">%.2f</string>
  <string name="degrees_celsius">°C</string>
  <string name="kilometers_per_hour">km/h</string>
  <string name="run_id">runId</string>
  <string name="request">request</string>
  <string name="time">time</string>
  <string name="data_unavailable">No data available</string>
  <string name="from_fragment">fromFragment</string>
  <string name="metres">metres</string>
  <string name="run">Run</string>

  <string name="freezing">Freezing</string>
  <string name="cold">Cold</string>
  <string name="mild">Mild</string>
  <string name="warm">Warm</string>
  <string name="hot">Hot</string>

  <string name="lat">Lat</string>
  <string name="lon">Lon</string>

  <string-array name="activity_types">
    <item>Untagged</item>
    <item>Walk</item>
    <item>Jog</item>
    <item>Run</item>
    <item>Sprint</item>
  </string-array>

  <!-- Layout -->

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="delete_run">Delete Run</string>
  <string name="save_tag">Save Tag</string>
  <string name="save">Save</string>
  <string name="pace">Pace</string>
  <string name="duration">Duration</string>
  <string name="distance">Distance</string>
  <string name="type">Type</string>
  <string name="date">Date</string>
  <string name="temperature">Temperature</string>
  <string name="menu">Menu</string>
  <string name="location">Location</string>
  <string name="weather">Weather</string>
  <string name="user_profile">User Profile</string>
  <string name="settings">Settings</string>
  <string name="settings_camel_case">Settings</string>
  <string name="by_weather">by weather</string>
  <string name="performance">Performance</string>
  <string name="map">Map</string>
  <string name="delete_hot_runs">Delete runs in hot weather</string>
  <string name="delete_warm_runs">Delete runs in warm weather</string>
  <string name="delete_mild_runs">Delete runs in mild weather</string>
  <string name="delete_cold_runs">Delete runs in cold weather</string>
  <string name="delete_freezing_runs">Delete runs in freezing weather</string>
  <string name="delete_user_and_all_runs_associated">Delete User (And All Runs Associated)</string>
  <string name="userCache">User</string>
  <string name="runs">Runs</string>
  <string name="delete_all_runs">Delete all runs</string>
  <string name="weight_in_kg">Weight in kg</string>
  <string name="height_in_cm">Height in cm</string>
  <string name="bmi">BMI</string>
  <string name="name">Name</string>
  <string name="profile">Profile</string>
  <string name="lifetime_performance">Lifetime Performance</string>
  <string name="by_average_pace">by average pace</string>
  <string name="walking">Walking</string>
  <string name="running">Running</string>
  <string name="jogging">Jogging</string>
  <string name="sprinting">Sprinting</string>
  <string name="type_formatted">Type:</string>
  <string name="date_formatted">Date:</string>
  <string name="preferences">Preferences</string>
  <string name="decrease_battery">decrease to save battery</string>
  <string name="time_update">Location tracking rate (seconds)</string>
  <string name="location_formatted">Location:</string>
  <string name="pace_formatted">Pace:</string>
  <string name="runningimage">RunningImage</string>
  <string name="exercise">Exercise</string>
  <string name="resume">Resume</string>
  <string name="pause">Pause</string>
  <string name="reset">Reset</string>
</resources>
