<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/verticalLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".android.activity.MainScreenActivity">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/rectangle_base"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:layout_constraintBottom_toTopOf="@+id/constrainedLayout2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/menu"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constrainedLayout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay"
      app:layout_constraintTop_toBottomOf="@+id/toolbar6">

      <View
        android:id="@+id/myRectangleView7"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/rectangle_narrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
      <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/linearLayout3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1">
          <TextView
            android:id="@+id/locationField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
          <TextView
            android:id="@+id/weatherField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TableLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:weightSum="2"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
          android:id="@+id/runButton"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:backgroundTint="@color/mainButtonColor"
          android:drawableStart="@drawable/jog_image"
          android:drawablePadding="-32sp"
          android:text="@string/run"
          android:textAllCaps="false"
          android:textStyle="bold"
          tools:ignore="NestedWeights" />
        <Button
          android:id="@+id/performanceButton"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:backgroundTint="@color/mainButtonColor"
          android:drawableStart="@drawable/graph_image"
          android:text="@string/performance"
          android:textAllCaps="false"
          android:textStyle="bold" />
      </TableRow>
      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
          android:id="@+id/userProfileButton"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:backgroundTint="@color/mainButtonColor"
          android:drawableStart="@drawable/profile_image"
          android:text="@string/user_profile"
          android:textAllCaps="false"
          android:textStyle="bold" />
        <Button
          android:id="@+id/settingsButton"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:backgroundTint="@color/mainButtonColor"
          android:drawableStart="@drawable/settings_image"
          android:drawablePadding="-32sp"
          android:text="@string/settings"
          android:textAllCaps="false"
          android:textStyle="bold" />
      </TableRow>
    </TableLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>