<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/linearLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backgroundColor"
  tools:context=".android.activity.UserProfileActivity">
  <View
    android:id="@+id/myRectangleView13"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:layout_marginTop="48dp"
    android:background="@drawable/rectangle_narrow"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  <View
    android:id="@+id/myRectangleView14"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/rectangle_base"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  <TextView
    android:id="@+id/walkingPaceField"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="130dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:ems="10"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />
  <View
    android:id="@+id/myRectangleView16"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:background="@drawable/rectangle_narrow"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    tools:layout_editor_absoluteY="360dp" />
  <TextView
    android:id="@+id/joggingPaceField"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="130dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:ems="10"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/walkingPaceField" />
  <TextView
    android:id="@+id/runningPaceField"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="130dp"
    android:layout_marginTop="31dp"
    android:layout_marginEnd="8dp"
    android:ems="10"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/joggingPaceField" />
  <TextView
    android:id="@+id/sprintingPaceField"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="130dp"
    android:layout_marginTop="31dp"
    android:layout_marginEnd="8dp"
    android:ems="10"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/runningPaceField" />


  <TextView
    android:id="@+id/textView9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="34dp"
    android:layout_marginEnd="12dp"
    android:text="@string/weight_in_kg"
    android:textColor="#000000"
    android:textSize="20sp"
    app:layout_constraintEnd_toStartOf="@+id/weightField"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView7" />
  <TextView
    android:id="@+id/textView10"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="34dp"
    android:layout_marginEnd="17dp"
    android:text="@string/height_in_cm"
    android:textColor="#000000"
    android:textSize="20sp"
    app:layout_constraintEnd_toStartOf="@+id/heightField"
    app:layout_constraintHorizontal_bias="0.1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView9" />
  <TextView
    android:id="@+id/textView13"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="34dp"
    android:text="@string/bmi"
    android:textColor="#000000"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView10" />
  <EditText
    android:id="@+id/nameField"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="160dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="32dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/myRectangleView13" />
  <EditText
    android:id="@+id/weightField"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="160dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="150dp"
    android:ems="10"
    android:inputType="numberSigned"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nameField" />
  <EditText
    android:id="@+id/heightField"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="160dp"
    android:layout_marginTop="22dp"
    android:layout_marginEnd="150dp"
    android:ems="10"
    android:inputType="numberSigned"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/weightField" />
  <TextView
    android:id="@+id/textView7"
    android:layout_width="77dp"
    android:layout_height="31dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="15dp"
    android:text="@string/name"
    android:textColor="#000000"
    android:textSize="24sp"
    app:layout_constraintEnd_toStartOf="@+id/nameField"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/myRectangleView13" />
  <TextView
    android:id="@+id/textView"
    android:layout_width="0dp"
    android:layout_height="31dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:text="@string/profile"
    android:textColor="#FFFFFF"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@+id/myRectangleView13"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/myRectangleView14" />
  <TextView
    android:id="@+id/textView3"
    android:layout_width="0dp"
    android:layout_height="31dp"
    android:text="@string/average_pace"
    android:textColor="#FFFFFF"
    android:textSize="18sp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="366dp" />
  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:text="@string/walking"
    android:textColor="#000000"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    tools:layout_editor_absoluteY="420dp" />
  <TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="20dp"
    android:text="@string/jogging"
    android:textColor="#000000"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />
  <TextView
    android:id="@+id/textView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="20dp"
    android:text="@string/running"
    android:textColor="#000000"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView5" />
  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="20dp"
    android:text="@string/sprinting"
    android:textColor="#000000"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView8" />
  <Button
    android:id="@+id/saveButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:onClick="onSaveButton"
    android:text="@string/save"
    app:layout_constraintTop_toBottomOf="@+id/nameField"
    tools:layout_editor_absoluteX="307dp" />
  <TextView
    android:id="@+id/textView15"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/user"
    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"
    android:textSize="30sp"
    app:layout_constraintBottom_toTopOf="@+id/myRectangleView13"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/myRectangleView14" />
  <TextView
    android:id="@+id/bmiField"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="160dp"
    android:layout_marginTop="28dp"
    android:layout_marginEnd="150dp"
    android:ems="10"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/heightField" />
</androidx.constraintlayout.widget.ConstraintLayout>